--- a/footer.html
+++ b/footer.html
@@ -28,6 +28,322 @@
   </div>
 
   <div id="modal">
+    <!-- <div id="modalBg"></div> -->
+
+    <!-- 컨텐츠 원문 리스트 모달 -->
+    <div id="showAllModal">
+      <div class="show-all-wrap">
+        <div class="show-all-inner">
+          <div class="show-all-top">
+            <h2 class="show-all-title">"<span class="keyword">베개</span>" 원문보기</h2>
+            <div class="sort-option">
+              <ul class="option-list">
+                <li class="option-item">최신순</li>
+                <li class="option-item">조회수순</li>
+                <li class="option-item">댓글수순</li>
+                <li class="option-item">추천수순</li>
+              </ul>
+              <div class="search-input">
+                <input type="text" id="searchOrigin" placeholder="검색어를 입력하세요">
+                <label for="searchOrigin" class="blind">검색어를 입력하세요</label>
+                <button class="search-btn"></button>
+              </div>
+              <div class="file-down-btn">
+                <button class="file-down"></button>
+              </div>
+              <div class="modal-cls-btn">
+                <button class="modal-cls">X</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="show-all-content">
+            <div class="content-title-wrap">
+              <ul class="title-list">
+                <li class="title-item title-channel"></li>
+                <li class="title-item title-name">TITLE</li>
+                <li class="title-item title-date">DATE</li>
+                <li class="title-item title-views">VIEWS</li>
+                <li class="title-item title-likes">LIKES</li>
+                <li class="title-item title-comments">COMMENTS</li>
+                <li class="title-item title-shares">SHARES</li>
+                <li class="title-item title-icon"></li>
+              </ul>
+            </div>
+            <div class="content-all-wrap">
+              <ul class="content-list">
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+                <li class="content-item">
+                  <ul class="content-subs-list">
+                    <li class="content-subs-item content-channel channel-sns-insta"></li>
+                    <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람
+                      대한으로 길이
+                      보전하세</li>
+                    <li class="content-subs-item content-date">2022.03.03</li>
+                    <li class="content-subs-item content-views">598,115</li>
+                    <li class="content-subs-item content-likes">2,788</li>
+                    <li class="content-subs-item content-comments">17,158</li>
+                    <li class="content-subs-item content-shares">370</li>
+                    <li class="content-subs-item content-icon"><a href="#"><img src="./src/img/icon/icon-link.svg"
+                          alt="" target="_blank"></a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 원문 내용 모달 -->
+    <div id="showOriginModal">
+      <div class="show-origin-wrap">
+        <div class="show-origin-inner">
+          <div class="show-origin-top">
+            <div class="origin-top-info">
+              <p class="origin-top-item origin-channel">인스타그램</p>
+              <span class="origin-top-item origin-id">ari******</span>
+              <span class="origin-top-item origin-date">2022.03.02</span>
+            </div>
+            <div class="modal-cls-btn">
+              <button class="modal-cls">X</button>
+            </div>
+          </div>
+
+          <div class="show-origin-content">
+            <div class="origin-content-title">
+              <h3>동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세</h3>
+              <p class="origin-link-wrap">
+                <span class="origin-link">https://www.instagram.com/p/Caj5V0aFVmz/v</span>
+                <span class="go-origin"><a href="https://www.instagram.com/p/Caj5V0aFVmz/v">원문가기</a></span>
+              </p>
+            </div>
+            <div class="origin-content-subs">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam, tempore quisquam? Sapiente maxime, eos
+              delectus quia corrupti ut iure blanditiis sed sunt numquam quasi consequuntur. Beatae nemo corporis
+              dignissimos animi eum voluptates ipsum expedita omnis dolor provident, nihil nobis voluptatibus eius
+              similique eligendi cum quis quo voluptas officiis nostrum, quaerat ipsam consequuntur assumenda molestias.
+              Deserunt perspiciatis, eligendi doloremque quidem voluptas omnis sunt nam. Mollitia omnis vel voluptas,
+              libero, voluptates obcaecati nam iure aspernatur veniam optio harum facilis quibusdam odit deserunt eum
+              pariatur quas reprehenderit repellendus ratione similique temporibus unde eaque! Voluptate natus
+              voluptatem nihil aut, quisquam inventore, suscipit ab reprehenderit corrupti architecto aliquam error
+              reiciendis in minus? Ab amet mollitia nemo asperiores perspiciatis in nesciunt dolorem aliquam, eum quidem
+              dignissimos quod fugiat accusantium a optio numquam sint similique pariatur, inventore veritatis. Libero,
+              dignissimos! Maxime a rerum, magni neque animi sit fuga. Magnam sed beatae ullam repellendus perferendis
+              voluptates dolorum! Architecto!
+            </div>
+          </div>
+
+          <div class="show-origin-bottom">
+            <ul class="origin-info-list">
+              <li class="origin-info-item">
+                <p class="info-title info-views">VIEWS</p>
+                <span class="info-num info-views-num">598,115</span>
+              </li>
+              <li class="origin-info-item">
+                <p class="info-title info-likes">LIKES</p>
+                <span class="info-num info-likes-num">2,788</span>
+              </li>
+              <li class="origin-info-item">
+                <p class="info-title info-comments">COMMENTS</p>
+                <span class="info-num info-comments-num">17,158</span>
+              </li>
+              <li class="origin-info-item">
+                <p class="info-title info-shares">SHARES</p>
+                <span class="info-num info-shares-num">370</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- 로그인 모달 -->
+    <div id="loginModal">
+      <div class="login-wrap">
+
+      </div>
+    </div>
 
   </div>
 </aside>
