--- a/header.html
+++ b/header.html
@@ -7,6 +7,7 @@
         <div class="search-input">
           <input type="text" id="searchWord" placeholder="검색어를 입력하세요">
           <label for="searchWord" class="blind">검색어를 입력하세요</label>
+          <button class="search-btn"></button>
         </div>
         <p class="search-detail-btn">
           <button id="detailOpen" class="">상세검색</button>
